# advent-of-code

./: readme.rst
2015/: .editorconfig  Pipfile  pyproject.toml
2015/day01/: day01.py  test_day01.py
2015/day02/: day02.py  test_day02.py
2015/day03/: day3.py  test_day3.py
2015/day04/: day4.py  test_day4.py
2015/day05/: day5.py  test_day5.py
2015/day06/: day6.py  test_day6.py
2015/day07/: day7.py
2015/day08/: day8.py
2015/day09/: day9.py
2015/day10/: day10.py  test_day10.py
2015/day11/: day11.py  test_day11.py
2015/day12/: day12.py
2015/day13/: day13.py
2015/day14/: day14.py
2015/day15/: day15.py  test_day15.py
2015/day16/: day16.py
2015/day17/: day17.py  test_day17.py
2015/day18/: day18.py
2015/day19/: day19.py  part2
2015/day20/: day20.py
2015/day21/: day21.py
2015/day22/: day22.py
2015/day23/: day23.py
2015/day24/: day24.py
2015/day25/: day25.py  input
2020/: Pipfile  conftest.py  pyproject.toml  readme.rst  setup.cfg
2020/day01/: day01.py  test_day01.py
2020/day02/: day02.py  test_day02.py
2020/day03/: day03.py  test_day03.py
2020/day04/: day04.py  day04_input_generation.py  test_day04.py
2020/day05/: day05.py  test_day05.py
2020/day06/: day06.py  day06_helper.hy  test_day06.py
2020/day07/: day07.py  test_day07.py
2020/day08/: day08.py  test_day08.py
2020/day09/: day09.py  test_day09.py
2020/day10/: day10.py  (+1 more)
2021/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.ipynb  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.ipynb  day15.ipynb  day15.py  day16.ipynb  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day22_sample  day22_sample2  day23.py  day23_sample  day24.ipynb  day24.py  day24_2.py  day25.py  pyproject.toml  test_day02.py  test_day03.py  test_day05.py  test_day16.py  test_day18.py
(+178 files in other folders)
