[tool.poetry]
name = "aoc_2015"
version = "0.1.0"
description = ""
authors = ["Paul Schwendenman <schwendenman.paul@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^3.9.2"
doc8 = "^0.9.1"
mypy = "^0.910"
rope = "^0.20.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
