[tool.poetry]
name = "2020"
version = "0.1.0"
description = "Advent of Code 2020 solutions"
authors = ["Paul Schwendenman <schwendenman.paul@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aoc = {path = "libs/aoc"}
regex = "^2020.11.13"
hy = "^0.19.0"
more-itertools = "^8.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
flake8 = "^3.8.4"
doc8 = "^0.8.1"
mypy = "^0.790"
rope = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
