[tool.poetry]
name = "2021"
version = "0.1.0"
description = "Advent of Code 2021 solutions"
authors = ["Paul Schwendenman <schwendenman.paul@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
rope = "^0.18.0"
mypy = "^0.790"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
